<?xml version="1.0"?>
<package format="2">
    <name>frankpiv</name>
    <version>1.0.0</version>
    <description>A pivoting controller for the franka emika panda roboter.</description>
    <maintainer email="ivana@willowgarage.com">Ivana Bildbotz</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>panda_moveit_config</depend>
    <depend>moveit_core</depend>
    <depend>moveit_msgs</depend>
    <depend>moveit_ros_planning_interface</depend>
    <depend>moveit_planners_ompl</depend>
    <depend>pivot_moveit_plugin</depend>
</package>